--- a/src/components/itemContainer/Item/_Item.scss
+++ b/src/components/itemContainer/Item/_Item.scss
@@ -1,5 +1,9 @@
 .item {
-    width: 200px;
-    height: 200px;
+    width: 90%;
+    flex: 0 0 auto;
+    height: 65vw;
     background-color: red;
+    border: 2px solid black;
+    min-width: 90%;
+    max-height: 650px;
 }
