--- a/src/components/itemContainer/_itemContainer.scss
+++ b/src/components/itemContainer/_itemContainer.scss
@@ -1,4 +1,4 @@
-@import '../../variables/colors.scss';
+@import '../../master.scss';
 
 .item-container {
     display: flex;
@@ -8,4 +8,5 @@
     align-items: center;
     height: 100vh;
     width: 100%;
+    overflow: hidden;
 }
