--- a/src/components/navArrow/_navArrow.scss
+++ b/src/components/navArrow/_navArrow.scss
@@ -1,3 +1,22 @@
-.arrow {
+@import '../../master.scss';
 
+.arrow {
+    background: $light-grey;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    border-radius: 100%;
+    transform: translate(0px, -50px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &.left {
+        left: 25px;
+    }
+    &.right {
+        right:25px;
+
+    }
 }
