removed navArrow component(too small to be component)

--- a/src/components/itemContainer/_itemContainer.scss
+++ b/src/components/itemContainer/_itemContainer.scss
@@ -9,4 +9,32 @@
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    
+    .arrow {
+        background: $light-grey;
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 50%;
+        border-radius: 100%;
+        transform: translate(0px, -50px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 27px;
+        cursor: pointer;
+        transition: opacity 0.11s ease-out;
+
+        &.left {
+            left: 25px;
+        }
+        &.right {
+            right:25px;
+
+        }
+
+        &:hover {
+            opacity: 0.9;
+        }
+    }
 }
