--- a/src/components/itemContainer/Item/_Item.scss
+++ b/src/components/itemContainer/Item/_Item.scss
@@ -8,4 +8,10 @@
     border: 2px solid black;
     min-width: 90%;
     max-height: 575px;
+    transform: scale(0.8);
+    transition: all 0.2s ease;
+
+    &.active {
+        transform: scale(1);
+    }
 }
