--- a/src/components/itemContainer/Item/_Item.scss
+++ b/src/components/itemContainer/Item/_Item.scss
@@ -18,4 +18,38 @@
         transform: scale(1);
         opacity: 1;
     }
+
+    img {
+        object-fit: fill; /* also try 'contain' and 'cover' */
+        width: 100%;
+        height: 100%;
+    }
+    .texts {
+        text-align:left;
+        font-family: 'Heebo', sans-serif;
+
+        .name {
+            font-family: 'GFS Didot', serif;
+            font-size: 40px;
+            margin-top: 10px;
+            font-style: italic;
+        }
+
+        .desc {
+            max-width: 500px;
+            margin-top: 10px;
+            font-size: 15px;
+            margin-bottom: 15px;
+        }
+
+        .rooms, .bathrooms {
+            font-size: 15px;
+            margin-top: 2px;
+
+            .bold {
+                font-weight:bold;
+            }
+        }
+    }
+
 }
