--- a/src/components/itemContainer/Item/_Item.scss
+++ b/src/components/itemContainer/Item/_Item.scss
@@ -3,30 +3,34 @@
 .item {
     width: 90%;
     flex: 0 0 auto;
-    height: 70vw;
     background-color: $light-grey;
     min-width: 90%;
-    max-height: 575px;
     transform: scale(0.8);
     transition: all 0.2s ease;
     opacity: 0.4;
-    -webkit-box-shadow: 0px 0px 55px -16px #0000001f;
-    -moz-box-shadow: 0px 0px 55px -16px #0000001f;
-    box-shadow: 0px 0px 55px 21px #0000001f;
+    max-height: 575px;
+    height: 65vh;
 
     &.active {
         transform: scale(1);
         opacity: 1;
+
+        .texts {
+            display: block;
+            opacity: 1;
+        }
     }
 
     img {
-        object-fit: fill; /* also try 'contain' and 'cover' */
+        object-fit: cover;
         width: 100%;
         height: 100%;
     }
     .texts {
         text-align:left;
         font-family: 'Heebo', sans-serif;
+        opacity:0;
+        transition: all 0.4s ease-in;
 
         .name {
             font-family: 'GFS Didot', serif;
@@ -36,7 +40,7 @@
         }
 
         .desc {
-            max-width: 500px;
+            max-width: 550px;
             margin-top: 10px;
             font-size: 15px;
             margin-bottom: 15px;
